--- a/linkbook/core/templates/core/profile.html
+++ b/linkbook/core/templates/core/profile.html
@@ -4,14 +4,12 @@
 {% block title %}{{user.username}}{% endblock %}
 {% block body %}
     <style>
-
     .btn-flat
     {
         text-transform: lowercase;
         width: 100%;
         margin: 5px;
-    }
-    .card1 div
+    }    .card1 div
     {
         margin: 1px;
         padding: 2px;
@@ -22,10 +20,7 @@
         margin: 1px;
         height: 100px;
     }
-    #popularLinksTab, #popularLinksTab
-    {
-        text-decoration-color: violet;
-    }
+
 
     </style>
     <div class="container">
@@ -50,7 +45,6 @@
                             {% endif %}
                         {% endif %}
                     {% endif %}
-
                     </div>
                     <div class="card-content">
                       <div class="container">
@@ -64,7 +58,6 @@
                                      <a href="/{{ user.username }}?show=books" target="_blank" class="btn btn-flat green">{{ book_count }} books(s)</a>
                                 </div>
                             </div>
-
                       </div>
                     </div>
                 </div>
@@ -72,17 +65,18 @@
         <!-- Ending of the first Column -->
         <!-- Second Column started -->
             <div class="col s12 m12 l8">
-                <div class="row" style="border-bottom: 3px solid violet">
-                    <div class="col s6 m6 l6">
-                                    <div class="header center center-align" id="popularLinksTab" style="padding: 0px; margin: 0px; cursor:pointer; text-decoration: underline">
-                        <h5 style="padding: 0px; margin: 0px; cursor: pointer">Popular Links</h5>
+            <br>
+                <div class="row" style="border-bottom: 3px solid lightgray; margin: 0px; padding: 0px">
+                    <div class="col s6 m6 l6" id="popularLinksDiv">
+                                    <div class="header center center-align" id="popularLinksTab" style="padding: 0px; margin: 0px; cursor:pointer;">
+                        <h5 style="padding: 0px; margin: 0px; cursor: pointer" id="popularLinksHeading">Popular Links</h5><br>
                     </div>
                     </div>
-                    <div class="col s6 m6 l6">
+                    <div class="col s6 m6 l6" id="popularBooksDiv">
                                     <div class="header center center-align" style="padding: 0px; margin: 0px; cursor: pointer" id="popularBooksTab">
-                        <h5 style="padding: 0px; margin: 0px" >Popular Books</h5>
+                        <h5 id="popularBooksHeading" style="padding: 0px; margin: 0px" >Popular Books</h5><br>
                     </div>
-                        <br><br>
+
                     </div>
                 </div>
                 <div class="row" id="popularLinks">
@@ -362,14 +356,22 @@
         var popularBooks = $('#popularBooks');
         var popularLinksTab = $('#popularLinksTab');
         var popularBooksTab = $('#popularBooksTab');
+        var popularLinksHeading = $('#popularLinksHeading');
+        var popularBooksHeading = $('#popularBooksHeading');
+        var popularBooksDiv = $('#popularBooksDiv');
+        var popularLinksDiv = $('#popularLinksDiv');
         popularBooks.css({'display' : 'none'});
-
+        popularLinksDiv.css({'border-bottom' : '3px groove red'}) ;
+     //      popularLinksTab.css({'box-shadow' : '3px 3px 15px rgba(0,0,0,0.75)'});
+   //         popularLinksHeading.css({'box-shadow' : 'none'});
         popularBooksTab.click(function () {
 
             popularLinks.css({'display' : 'none' });
             popularBooks.css({'display' : 'block'});
-            popularBooksTab.css({'text-decoration' : 'underline'});
-            popularLinksTab.css({'text-decoration' : 'none'});
+            popularBooksDiv.css({ 'border-bottom' : '3px groove red'});
+           // popularBooksTab.css({'box-shadow' : '3px 3px 15px rgba(0,0,0,0.75)'});
+          //  popularLinksTab.css({'box-shadow' : 'none'});
+            popularLinksDiv.css({ 'border-bottom' : 'none'});
 
         });
 
@@ -377,8 +379,10 @@
 
             popularBooks.css({'display' : 'none'});
             popularLinks.show({'display' : 'block'});
-            popularLinksTab.css({'text-decoration' : 'underline'});
-            popularBooksTab.css({'text-decoration' : 'none'});
+            popularLinksDiv.css({ 'border-bottom' : '3px groove red'});
+         //   popularLinksTab.css({'box-shadow' : '3px 3px 15px rgba(0,0,0,0.75)'});
+           // popularBooksTab.css({'box-shadow' : 'none'});
+            popularBooksDiv.css({'border-bottom' : 'none'});
 
             });
 
