--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load i18n %}
 
-{% block title %}LinkBook{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block body %}
 
