--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -43,13 +43,13 @@
                 <li><a class="right" href="#modal1">Login</a></li>
                 <li ><a href="/signup" class="right">Sign Up</a></li>
                 {% else %}
+                <li>
+                   <img class="responsive-img square hoverable"  style= "vertical-align: middle" height = "40px" width="40px"   src="{{request.user.profile.pic}}" id="userProfilePicNavbar">&nbsp;{{request.user.first_name}}
+               </li>
                 <li><a class="btn-floating  waves-effect waves-light green" href="#modal2" title="Create new book" ><i class="material-icons">queue</i></a></li>
                 <li><a class="btn-floating waves-effect waves-light green" href="#modal3" title="Create new link" ><i class="material-icons">note_add</i></a>
                 </li>
-               <li><a class='dropdown-button btn-floating waves-effect waves-light blue' data-beloworigin="true" href='#' data-activates='NOTIFS'><i class="material-icons">notifications</i></a></li>
-               <li>
-                   <img class="responsive-img square hoverable"  style= "vertical-align: middle" height = "40px" width="40px"   src="{{request.user.profile.pic}}" id="userProfilePicNavbar">&nbsp;{{request.user.first_name}}
-               </li>
+               <li><a class='dropdown-button btn-floating waves-effect waves-light blue' data-beloworigin="true" href='#!' data-activates='NOTIFS' id="MYNOTIF" data-constrainwidth="false"><i class="material-icons">notifications</i></a></li>
                <li><a href="/logout/?next={{request.path}}">Logout</a></li>
                {% endif %}
 
@@ -269,12 +269,13 @@
       });
 
 
-      {% if request.user.is_authenticated %}
+       {% if request.user.is_authenticated %}
         // function to load user books when page is loaded
         $(document).ready(function(){
             //initialize
             var books = $("#BOOKS");
             var notifs = $("#NOTIFS");
+            var notif_master = $("#MYNOTIF");
 
             $.ajax({ url: '/navbar/',
                type: 'post',
@@ -294,31 +295,26 @@
 
                     // bind new notifications
                     notifs.material_select(true);
-                    console.log(notifs.html());
+                    notif_master.dropdown();
 
                 },
             });
-        });
         {% endif %}
 
-        // function to load user profile on click 
-        $(function () {
-            $(".button-collapse").sideNav();
-            $('select').material_select();
-            $('#userProfilePicNavbar').click(function () {
-                var url = "/" + "{{ request.user.username }}";
-                window.location.href = url;
-            });
-            $('.modal').modal();
+        // to load user profile url on click 
+        $(".button-collapse").sideNav();
+        $('select').material_select();
+        $('#userProfilePicNavbar').click(function () {
+            var url = "/" + "{{ request.user.username }}";
+            window.location.href = url;
         });
+        $('.modal').modal();
 
-        // function to auto-resize descrption field
-        $(function () {
-           $('#DESCRIPTION').trigger('autoresize');
-           $('.chips').material_chip();
-
-           $('#TITLE, #DESCRIPTION').characterCounter();
-       });
+        // to auto-resize descrption field
+        $('#DESCRIPTION').trigger('autoresize');
+        $('.chips').material_chip();
+        $('#TITLE, #DESCRIPTION').characterCounter();
+    });
    </script>
 </body>
 </html>
