added image and divider in notifs

--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -292,8 +292,10 @@
 
                     
                     for(var i = 0; i<data['notifs'].length;i++){
-                        notifs.append("<li><a href='/link/" + data['notifs'][i]['id'] + "/'>" 
-                            + data['notifs'][i]['text'] + "</a></li>");
+                        notifs.append("<li><a href='/link/" + data['notifs'][i]['id'] + "/'>"
+                            + "<img src=" + data['notifs'][i]['pic'] + " height=20px width=20px/>&nbsp" 
+                            + data['notifs'][i]['text'] + "</a></li>"
+                            + "<li class='divider'></li>");
                     }
 
                     // bind new notifications
