--- a/linkbook/static/materialize/css/basic.css
+++ b/linkbook/static/materialize/css/basic.css
@@ -9,7 +9,7 @@
 
     }
 
-    .row > h1
+/*    .row > h1
     {
         margin-left: 15%;
     }
@@ -34,3 +34,4 @@
         margin-left: 15%;
     }
 
+*/
