--- a/linkbook/links/templates/links/view_books.html
+++ b/linkbook/links/templates/links/view_books.html
@@ -5,29 +5,37 @@
 {% block title %}{% endblock %}
 
 {% block body %}
+    <style>
+        .description
+        {
+            overflow: hidden;
+            height: 70px;
+        }
+    </style>
 <div class = "container">
-
     <div class="row">
         <h3 class="center blue-grey-text">{{user.username}}'s Books</h3>
     </div>
-    {% for book in view_books %}
-        <div class="row">
-          <a href="/book/{{book.id}}">
-            <div class="col s1 l4 m4"></div>
-            <div class="col s10 m4 l4">
-                <div class="card horizontal hoverable blue-grey white-text lighten-1 ">
-                  <div class="card-stacked">
-                      <div class="card-title center"><h4>{{ book.title }}</h4></div>
-                      <div class="card-content">
-                      <p class="truncate">{{ book.description }}</p>
-                      <p>{{book.link_set.count}} link(s)</p>
+    <div class="row">
+        {% for book in view_books %}
+        <div class="col s12 m4 l4">
+        <a href="/book/{{ book.id }}">
+            <div class="row">
+                <div class="col s12 m12 l12">
+                    <div class="card horizontal hoverable blue-grey white-text lighten-1 ">
+                          <div class="card-stacked">
+                              <div class="card-title center"><h4>{{ book.title }}</h4></div>
+                              <div class="card-content">
+                              <p class="description">{{ book.description }}</p>
+                              <p>{{book.link_set.count}} link(s)</p>
+                            </div>
+                          </div>
                     </div>
-                  </div>
-    </div>
-  </div>
-            <div class="col s1 m4 l4"></div>
+                </div>
+            </div>
             </a>
         </div>
     {% endfor %}
     </div>
+</div>
 {% endblock%}
