--- a/linkbook/links/templates/links/view_links.html
+++ b/linkbook/links/templates/links/view_links.html
@@ -5,21 +5,33 @@
 {% block title %}{% endblock %}
 
 {% block body %}
+    <style>
+        .card1
+        {
+            height : 300px;
+        }
+        .description
+        {
+            overflow: hidden;
+            max-height : 70px;
+        }
+    </style>
     <div class = "container">
-
-    <div class="row">
-        <h3 class="center blue-grey-text">{{user.username}}'s links</h3>
-    </div>
-    {% for link in view_links %}
         <div class="row">
-            <div class="col s1 l4 m4"></div>
-            <div class="col s10 m4 l4">
-                <div class="card horizontal hoverable white-text blue-grey lighten-1">
+            <h3 class="center blue-grey-text">{{user.username}}'s links</h3>
+        </div>
+        <div class="row">
+            {% for link in view_links %}
+                <div class="col s12 m4 l4">
+                    <div class="row">
+                        <div class="col s12 m12 l12">
+
+                <div class="card card1 horizontal hoverable white-text blue-grey lighten-1">
                   <div class="card-stacked">
                       <div class="card_link" id="{{ link.id }}"  style="cursor: pointer;">
                       <div class="card-title center"><h5>{{link.title}}</h5></div>
                       <div class="card-content" id="{{ link.id }}">
-                      <p>{{ link.description }}</p>
+                      <p class="description">{{ link.description }}</p>
                       <p>Books:
                         {% for book in link.books.all %}
                             <span class="chip">
@@ -45,13 +57,11 @@
                     </div>
                   </div>
                 </div>
-            </div>
-            <div class="col s1 m4 l4"></div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
-
-    {% endfor %}
-
-
     </div>
     <script>
 
@@ -70,3 +80,4 @@
     </script>
 
 {% endblock%}
+
